@@ -1,4 +1,4 @@
-(defproject org.clojars.jacobmbr/jepsen "0.1.4"
+(defproject org.clojars.jacobmbr/jepsen "0.1.5"
   :description "Distributed systems testing framework."
   :url         "https://jepsen.io"
   :license {:name "Eclipse Public License"
@@ -10,7 +10,7 @@
                  [spootnik/unilog "0.7.13"]
                  [org.clojure/tools.cli "0.4.1"]
                  [clj-time "0.11.0"]
-                 [jepsen.txn "0.1.0"]
+                 [jepsen.txn "0.1.1"]
                  [knossos "0.3.4" :exclusions [org.slf4j/slf4j-log4j12]]
                  [tea-time "1.0.1"]
                  [clj-ssh "0.5.14"]
@@ -20,20 +20,17 @@
                  [hiccup "1.0.5"]
                  [metametadata/multiset "0.1.1"]
                  [byte-streams "0.2.2"]
-                 [dom-top "1.0.4"]
+                 [dom-top "1.0.5"]
                  [slingshot "0.12.2"]
                  [org.clojure/data.codec "0.1.1"]
-                 [fipp "0.6.13"]]
+                 [fipp "0.6.13"]
+                 [io.lacuna/bifurcan "0.1.0"]]
   :main jepsen.cli
   :plugins [[lein-localrepo "0.5.4"]
             [lein-codox "0.10.3"]]
-  :aot [jepsen.cli clojure.tools.logging.impl]
-;        clojure.tools.logging.impl]
   :jvm-opts ["-Xmx32g" "-XX:+UseConcMarkSweepGC" "-XX:+UseParNewGC"
              "-XX:+CMSParallelRemarkEnabled" "-XX:+AggressiveOpts"
-             "-XX:+UseFastAccessorMethods" "-server"
-             ; "-XX:-OmitStackTraceInFastThrow"
-             ]
+             "-XX:+UseFastAccessorMethods" "-server"]
   :test-selectors {:default (fn [m]
                               (not (or (:integration m)
                                        (:logging m))))
@@ -41,4 +38,11 @@
                    :integration :integration}
   :codox {:output-path "doc/"
           :source-uri "https://github.com/jepsen-io/jepsen/blob/{version}/jepsen/{filepath}#L{line}"
-          :metadata {:doc/format :markdown}})
+          :metadata {:doc/format :markdown}}
+  :profiles {:uberjar {:aot :all}
+             :dev {:jvm-opts ["-Xmx32g" "-XX:+UseConcMarkSweepGC"
+                              "-XX:+UseParNewGC"
+                              "-XX:+CMSParallelRemarkEnabled"
+                              "-XX:+AggressiveOpts"
+                              "-XX:+UseFastAccessorMethods" "-server"
+                              "-XX:-OmitStackTraceInFastThrow"]}})
